<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:contentDescription="@string/logo_del_restaurante"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cacahuazintle"
                tools:srcCompat="@drawable/cacahuazintle" />

            <TextView
                android:id="@+id/restauranteLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/infor"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:id="@+id/sucursalesLBL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/nuestras_sucursales"
                android:textColor="#121212"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restauranteLbl"
                tools:ignore="TextSizeCheck" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sucursalesLBL"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/suc1LBL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/suc1TXT"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/num1" />

                <TextView
                    android:id="@+id/suc2LBL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/suc2TXT"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/num2" />

                <TextView
                    android:id="@+id/suc3LBL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/suc3TXT"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/num3"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="makeCall"
                android:text="@string/llamar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="0.352" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/boton_flotante"
        android:focusable="true"
        android:onClick="launchSecond"
        android:scaleType="centerCrop"
        app:backgroundTint="#9A5B58"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/plus" />

</androidx.constraintlayout.widget.ConstraintLayout>